# clv-poc

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  config.yaml  pyproject.toml
.github/workflows/: ci.yml
analysis/: clv.py  report.py
client/: odds_api.py
dashboard/: app.py  charts.py  queries.py  transforms.py
dashboard/views/: __init__.py  common.py  events.py  guide.py  operations.py  overview.py
docs/superpowers/plans/: 2026-07-15-mart-closing-selection-fix.md
docs/superpowers/specs/: 2026-07-15-mart-closing-selection-fix-design.md
docs/the-odds-api/: README.md  bookmakers.md  faq.md  guide-endpoints.md  guide-overview.md  historical-odds-guide.md  pricing-tiers.md  update-intervals.md
scheduler/: capture.py  daemon.py  planning.py  preview.py
scripts/: check_odds_api_credits.py  check_soft_book_coverage.py  list_sports.py  verify_pinnacle.py
storage/: db.py
tests/: test_capture.py  test_clv.py  test_config.py  test_daemon.py  test_dashboard_events_view.py  test_dashboard_queries.py  test_dashboard_transforms.py  test_odds_api.py  test_planning.py  test_preview.py  test_report.py  test_storage.py
