[project]
name = "clv-poc"
version = "0.1.0"
authors = [
    { name = "Edu González", email = "edunavata@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
